--- a/EverythingUI.WPF/Themes/EverythingCard.xaml
+++ b/EverythingUI.WPF/Themes/EverythingCard.xaml
@@ -9,6 +9,7 @@
         <Setter Property="Padding" Value="16"/>
         <Setter Property="HeaderPadding" Value="16,16,16,0"/>
         <Setter Property="FooterPadding" Value="16,0,16,16"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:EverythingCard">
