--- a/EverythingUI.WPF/Themes/Generic.xaml
+++ b/EverythingUI.WPF/Themes/Generic.xaml
@@ -15,6 +15,7 @@
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingToggleSwitch.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingSideBar.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingComboBox.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/EverythingUI.WPF;component/Themes/EverythingSlider.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
